# ovos-mac

./: .gitignore  README.md  mycroft.conf.example  ovos_PHAL  ovos_PHAL_admin  pyproject.toml  startup.sh
ansible/: README.md  ovos.admin-phal.service.plist.j2  ovos.messagebus.service.plist.j2  ovos.service.plist.j2  ovos_mac_setup.yaml  sudoers.j2
scripts/: numpy-test.py  train_custom_verifier.py
