[tool.poetry]
name = "neon-mac"
version = "0.1.0"
description = "Necessary packages for running Neon natively on Mac OS!"
authors = ["Mike Gray <mike@graywind.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "neon_mac" }]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
tensorflow = "^2.13.0"
tensorflow-metal = "^1.1.0"
padatious = "^0.4.8"
ovos-ww-plugin-precise-lite = { extras = ["full"], version = "^0.1.2" }
ovos-ww-plugin-openwakeword = { git = "https://github.com/OpenVoiceOS/ovos-ww-plugin-openWakeWord" }
ovos-vad-plugin-silero = "^0.0.1"
ovos-microphone-plugin-pyaudio = "^0.0.0a2"
ovos-stt-plugin-server = { version = "0.0.4a7", allow-prereleases = true }
ovos-tts-plugin-server = { version = "^0.0.2a12", allow-prereleases = true }
neon-tts-plugin-mozilla-remote = "^1.0.0"
ovos-stt-plugin-chromium = { git = "https://github.com/OpenVoiceOS/ovos-stt-plugin-chromium" }
ovos-phal-plugin-ipgeo = { version = "^0.0.2", allow-prereleases = true }
ovos-phal-plugin-homeassistant = { version = "^0.0.4a6", allow-prereleases = true }
cython = "^3.0.10"
vosk = { path = "/Users/Mike/Downloads/vosk-0.3.44-py3-none-macosx_10_6_universal2.whl" }
ovos-ww-plugin-precise = "^0.1.1"
ovos-ww-plugin-vosk = { version = "^0.1.2a1", allow-prereleases = true }
neon-transcripts-controller = { git = "https://github.com/NeonGeckoCom/transcripts_controller" }
neon-utils = { version = "^1.10.0", allow-prereleases = true }
neon-messagebus = { version = "^2.0.2a6", allow-prereleases = true }
neon-utterance-normalizer-plugin = { version = "^0.1.0", allow-prereleases = true }
neon-audio = { version = "^1.5.2a3", allow-prereleases = true }
neon-api-proxy = { version = "^0.5.1a2", allow-prereleases = true }
neon-mq-connector = { version = "^0.7.2a2", allow-prereleases = true }
ovos-bus-client = { version = "^0.0.9a18", allow-prereleases = true }
neon-utterance-translator-plugin = { version = "^0.2.1a1", allow-prereleases = true }
neon-enclosure = { version = "^1.7.1a1", allow-prereleases = true }
ovos-plugin-manager = { version = "^0.0.26a15", allow-prereleases = true }
neon-speech = { path = "../neon_speech" }                                                            # For Mac, since the package forces the alsa mic plugin and Mac doesn't come with alsa
ovos-core = { version = "^0.0.8a93", allow-prereleases = true }
neon-transformers = { version = "^0.2.1a4", allow-prereleases = true }

[tool.poetry.group.skills.dependencies]
neon-homeassistant-skill = { git = "https://github.com/mikejgray/neon-homeassistant-skill", rev = "FEAT_ConfigFlagToDisable", allow-prereleases = true }
ovos-skill-icanhazdadjokes = { git = "https://github.com/OpenVoiceOS/skill-ovos-icanhazdadjokes" }
neon-skill-date-time = "^1.1.1a1"
skill-randomness = { git = "https://github.com/OpenVoiceOS/skill-ovos-randomness" }
skill-easter-eggs = { git = "https://github.com/OpenVoiceOS/ovos-skill-easter-eggs", rev = "dev" }
neon-skill-about = "^1.0.1"
neon-skill-alerts = "^3.0.0"
neon-skill-ip-address = "^1.2.0"
neon-skill-speak = "^2.0.1"
neon-skill-speed-test = "^1.0.2"
neon-skill-spelling = "^1.1.0"
neon-skill-fallback-llm = { version = "^1.0.1", allow-prereleases = true }
neon-skill-fallback-wolfram-alpha = { version = "^2.0.0", allow-prereleases = true }
neon-skill-personal = "^1.0.1"
neon-skill-user-settings = "^1.0.5"
neon-skill-weather = "^2.0.0"
neon-skill-wikipedia = "^1.0.2"

[tool.poetry.group.padatious.dependencies]
fann2 = "<1.1.0"
padatious = "^0.4.8"

# [tool.poetry.group.media.dependencies]
# ovos-media-plugin-vlc = "0.1.0a3"
# ovos-ocp-youtube-plugin = { git = "https://github.com/OpenVoiceOS/ovos-ocp-youtube-plugin" }
# ovos-media = {git = "https://github.com/OpenVoiceOS/ovos-media", rev = "dev" }
#ovos-skill-somafm = {git = "https://github.com/OpenVoiceOS/skill-ovos-somafm"}
#skill-plex = {git = "https://github.com/mikejgray/skill-plex", rev = "feat-minor-improvements"}
# ovos-plugin-vlc = { git = "https://github.com/openvoiceos/ovos-media-plugin-vlc", rev = "ed17d41d7a66d2665a908509e7df3cf57273b717" }
#skill-simple-youtube = {git = "https://github.com/OpenVoiceOS/skill-ovos-youtube"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
